# mediator-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
mediator/: Cargo.toml  README.md  REAME.md
mediator/src/: error.rs  event.rs  interceptor.rs  lib.rs  mediator.rs  request.rs  stream.rs  streams.rs
mediator/src/default_impls/: async_mediator_impl.rs  mediator_impl.rs  mod.rs
mediator/src/futures/: events.rs  mediator.rs  mod.rs  request.rs  stream.rs
mediator/src/futures/stream/: generate_stream.rs  generate_try_stream.rs  generator.rs  generator_macros.rs  mod.rs  stream_builder.rs  yielder.rs
mediator/src/impls/: async_mediator_impl.rs  mediator_impl.rs  mod.rs
samples/: .gitignore
samples/async_api/: Cargo.toml
samples/async_api/src/: main.rs
samples/async_traits_sample/: Cargo.toml
samples/async_traits_sample/src/: main.rs
samples/events/: Cargo.toml
samples/events/src/: main.rs
samples/hello_world/: Cargo.toml
samples/hello_world/src/: main.rs
samples/interceptors/: Cargo.toml  README.md
samples/interceptors/src/: ext.rs  macros.rs  main.rs  utils.rs
samples/interceptors/src/interceptors/: colored_interceptor.rs  mod.rs  monochrome_interceptor.rs  upper_case_interceptor.rs
samples/interceptors/src/requests/: key_press.rs  mod.rs
samples/products_api/: Cargo.toml  README.md  docker-compose.yml
samples/products_api/data/redis/: dump.rdb
samples/products_api/src/: main.rs
samples/products_api/src/commands/: add_product.rs  delete_product.rs  mod.rs  update_product.rs
samples/products_api_async/: Cargo.toml  README.md
samples/products_api_async/data/redis/: dump.rdb
samples/products_api_async/src/: main.rs
samples/products_api_async/src/commands/: add_product.rs  delete_product.rs  mod.rs  update_product.rs
samples/products_api_async/src/endpoints/: products.rs
samples/products_api_async/src/events/: mod.rs
samples/products_api_async/src/models/: product.rs
samples/products_api_async/src/queries/: get_all_products.rs  get_product.rs  mod.rs
samples/products_api_async/src/services/: redis_service.rs
samples/req_res/: Cargo.toml
samples/req_res/src/: main.rs
samples/rest_api/: Cargo.toml
samples/rest_api/data/redis/: dump.rdb
samples/rest_api/src/: main.rs  models.rs  service.rs
samples/rest_api/src/commands/: add_product.rs  delete_product.rs  mod.rs  update_product.rs
samples/rest_api/src/endpoints/: products.rs
samples/rest_api/src/events/: mod.rs
samples/rest_api/src/queries/: get_all_products.rs  get_product.rs  mod.rs
samples/rest_api/src/services/: redis_service.rs
samples/timer/: Cargo.toml
samples/timer/src/: main.rs
(+7 files in other folders)
