[package]
name = "mediator"
description = "An implementation of the Mediator pattern in Rust"
license = "MIT"
version = "0.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://crates.io/crates/mediator/"
repository = "https://github.com/Neo-Ciber94/mediator-rs/"
documentation = "https://docs.rs/mediator/"

[features]
impls = []
default = ["impls"]