[package]
name = "mediator"
description = "An implementation of the Mediator pattern in Rust"
keywords = ["rust-patterns"]
license = "MIT"
version = "0.2.0"
edition = "2021"
homepage = "https://crates.io/crates/mediator/"
repository = "https://github.com/Neo-Ciber94/mediator-rs/"
documentation = "https://docs.rs/mediator/"

[dependencies]
tokio-stream = { version ="0.1.8", optional = true }
tokio = { version = "1.17.0", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
async-trait = { version = "0.1.52", optional = true }

[features]
impls = []
default = ["impls"]
async = ["tokio", "async-trait"]
streams = ["tokio", "tokio-stream"]