[package]
name = "products_api_async"
version = "0.1.0"
edition = "2021"

[dependencies]
mediator = { path="../../mediator", features=["async", "streams"] }
tokio = { version = "1", features = ["macros"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"