[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
mediator = { path="../../mediator" }
redis = "0.21.5"
actix-web = "4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }